# retail-inventory-api

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  api.http  config.py  database.py  docker-compose.yml  exception_handlers.py  exceptions.py  health.py  home.py  inventory_io.py  inventory_service.py  logger_config.py  main.py  models.py  products.json  products.py  pyproject.toml  pyvenv.cfg  requirements.txt  services.py
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
app/: config.py  database.py  logger_config.py  main.py  models.py
app/controllers/: __init__.py  analytics.py  products.py  variants.py
app/core/: __init__.py  config.py  database.py  logger_config.py
app/core/errors/: __init__.py  exceptions.py  handlers.py
app/middleware/: __init__.py  exception_handlers.py
app/models/: __init__.py  product.py  variant.py
app/routers/: __init__.py  analytics.py  health.py  home.py  products.py  variants.py
app/utils/: __init__.py  sku.py
app/utils/errors/: __init__.py
migrations/: env.py
migrations/versions/: 0a15537c0ab3_initial_retail_schema.py  b2f4e891c3d7_migrate_to_uuid_pks_and_add_sku.py
tests/: conftest.py  test_analytics.py  test_api.py  test_health.py  test_home.py  test_mock_api.py  test_products.py  test_variants.py
